force-app/main/default/objects/Stock__c/fields/Damage_Description__c.field-meta.xml
<CustomField>
    <fullName>Damage_Description__c</fullName>
    <label>Damage Description</label>
    <type>TextArea</type>
</CustomField>