force-app/main/default/objects/Stock__c/fields/PriorStatusValue__c.field-meta.xml
<CustomField>
    <fullName>PriorStatusValue__c</fullName>
    <label>PriorStatusValue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>