force-app/main/default/objects/Stock__c/fields/Title_Name__c.field-meta.xml
<CustomField>
    <fullName>Title_Name__c</fullName>
    <formula>Title__r.Name</formula>
    <label>Title Name</label>
    <type>Text</type>
</CustomField>