force-app/main/default/objects/Stock__c/validationRules/Require_Damage_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Damage_Description</fullName>
    <active>true</active>
    <description>When Status is set to Damaged, a Damage Description is required.</description>
    <errorConditionFormula>AND( ISCHANGED( Status__c ),  ISPICKVAL( Status__c , &quot;Damaged&quot;),  ISBLANK( Damage_Description__c ))</errorConditionFormula>
    <errorDisplayField>Damage_Description__c</errorDisplayField>
    <errorMessage>Please fill out a Damage Description</errorMessage>
</ValidationRule>